# RSymSQCD

./: .clang-format  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  MRSSM_1L_uu_susu_msg=2000GeV.txt  README.md  README.txt  SConstruct  bitbucket-pipelines.yml  config.ini  configure-example-gcc.ini  configure-example-intel.ini  configure-example.ini  configure.ini  run.ini  skrypt
.github/workflows/: test.yml
amplitudes/: MRSSM_1L_GG_su1su1dagger.cpp  MRSSM_1L_GG_su1su1dagger.h  MRSSM_1L_ud_su1sd4.cpp  MRSSM_1L_ud_su1sd4.h  MRSSM_1L_uu_su1su4.cpp  MRSSM_1L_uu_su1su4.h  MRSSM_1L_uubar_su1su1dagger.cpp  MRSSM_1L_uubar_su1su1dagger.h  MRSSM_Tree_GG_su1su1dagger.cpp  MRSSM_Tree_GG_su1su1dagger.h  MRSSM_Tree_ud_su1sd4.cpp  MRSSM_Tree_ud_su1sd4.h  MRSSM_Tree_uu_su1su4.cpp  MRSSM_Tree_uu_su1su4.h  MRSSM_Tree_uubar_su1su1dagger.cpp  MRSSM_Tree_uubar_su1su1dagger.h  MSSM_1L_ud_su1sd4.cpp  MSSM_1L_ud_su1sd4.h  MSSM_1L_uu_su1su4.cpp  MSSM_1L_uu_su1su4.h  MSSM_Tree_ud_su1sd4.cpp  MSSM_Tree_ud_su1sd4.h  MSSM_Tree_uu_su1su4.cpp  MSSM_Tree_uu_su1su4.h
ancillary/: MRSSMEWSB_myRenConst.mod  MSSMEWSB_myRenConst.mod  MultivariateApart.wl  compare_json_outputs.rb  compare_with_mg.rb  parse_jason_output.py  parse_jason_output.rb  test.wl  total_xsec_from_json.rb
ancillary/MG-validation/: BinothLHA_OLP.f  change_MG  changes_gosam  gosam.conf  gosam.rc  matrix.f90
ancillary/generate_MEs/: generate_hard.wl  generate_soft.wl  generate_soft2.wl  generate_virt.wl  integrate_soft.wl  paint_diagrams.wl  partial_fraction_soft.wl
ancillary/generate_virtuals/: gg_suLsuLbar.wl
cmake/: FindLHAPDF6.cmake
docs/html/: CSDipole_8hpp_source.html  Color__Connected__MEs_8h_source.html  IMatrixElements_8h_source.html  MRSSM_8h_source.html  MSSM_8h_source.html  Process_8hpp_source.html  SM_8h_source.html  Vec4D_8hpp_source.html  XSection_8hpp_source.html  XSection__HnonC_8hpp_source.html  XSection__SC_8hpp_source.html  XSection__Tree_8hpp_source.html  XSection__Virt_8hpp_source.html  annotated.html  classCSDipole-members.html  classCSDipole.html  classIMatrixElements-members.html  classIMatrixElements.html  classMRSSM-members.html  classMRSSM.html  classMSSM-members.html  classMSSM.html  classProcess-members.html  classProcess.html  classSM-members.html  classSM.html  classVec4D-members.html  classVec4D.html  classXSection-members.html  classXSection.html  classXSection__HnonC-members.html  classXSection__HnonC.html  classXSection__SC-members.html  classXSection__SC.html  classXSection__Tree-members.html  classXSection__Tree.html  classXSection__Virt-members.html  classXSection__Virt.html  classes.html  constants_8hpp_source.html  (+10 more)
docs/latex/: annotated.tex  classCSDipole.tex  classIMatrixElements.eps  (+23 more)
include/: CSDipole.hpp  CSDipoles.hpp  CS_FF_Dipoles.hpp  Color_Connected_MEs.h  IMatrixElements.h  IModel.h  MRSSM.h  MSSM.h  Process.hpp  RSymSQCDConfig.hpp.in  SM.h  Vec4D.hpp  XSection.hpp  XSection_HnonC.hpp  XSection_SC.hpp  XSection_Tree.hpp  XSection_Virt.hpp  constants.hpp  mathematica_wrapper.hpp  splitting_kernels.hpp  utils.hpp  version.hpp.in
modelfiles/: MRSSMEWSB_myRenConst.mod
run_cards/: BMP1.ini  BMP2-DS.ini  e+e-_massive_qqbar.ini  pp_suLsuLdagger_BMP1_DR.ini  pp_suLsuLdagger_BMP1_DS.ini  pp_suLsuLdagger_BMP2_DR.ini  pp_suLsuLdagger_BMP2_DS.ini  pp_suLsuR_BMP1_DR.ini  pp_suLsuR_BMP1_DS.ini  pp_suLsuR_BMP2_DR.ini  pp_suLsuR_BMP2_DS.ini  pp_suLsuR_BMP3_DR.ini  pp_suLsuR_BMP3_DS.ini  pp_suLsuR_arXiv:1305.4061_DR.ini
src/: CSDipole.cpp  CSDipoles.cpp  CS_FF_Dipoles.cpp  Color_Connected_MEs.cpp  MRSSM_1L_uu_su1su4.cpp  MRSSM_1L_uu_su1su4.h  MRSSM_Tree_uu_su1su4.cpp  MRSSM_Tree_uu_su1su4.h  MSSM_1L_uu_su1su4.cpp  MSSM_1L_uu_su1su4.h  MSSM_Tree_uu_su1su4_EqualFlavor.cpp  MSSM_Tree_uu_su1su4_EqualFlavor.h  Process.cpp  Process.h  SConscript  XSection.cpp  XSection.h  XSection_HnonC.cpp  XSection_HnonC.h  XSection_Real.hpp  XSection_SC.cpp  XSection_SC.h  XSection_SC.hpp  XSection_Tree.cpp  XSection_Tree.h  XSection_Tree_MRSSM.cpp  XSection_Tree_MRSSM.h  XSection_Tree_MSSM.cpp  XSection_Tree_MSSM.h  XSection_Virt.cpp  XSection_Virt.h  XSection_Virt_MRSSM.cpp  XSection_Virt_MRSSM.h  XSection_Virt_MSSM.cpp  XSection_Virt_MSSM.h  constants.hpp  main.cpp  mathematica_wrapper.hpp  splitting_kernels.cpp  utils.cpp
test/: CMakeLists.txt  MRSSM_hard_matrix_elements.cpp  MRSSM_soft_matrix_elements.cpp  MRSSM_tree_matrix_elements.cpp  MRSSM_tree_xsections.cpp  MRSSM_virtual_matrix_elements.cpp  Sgluons_hard_matrix_elements.cpp  check_born_xsec.rb  compare_json_outputs.rb  hard_matrix_elements.cpp  test_test.cpp  tree_matrix_elements.cpp
test/ref_outputs/: pp_sqsqdagger_BMP2_LO.json  pp_suLsuLdagger_BMP3_DR.json  pp_suLsuR_BMP2_DR.ref
test/ref_outputs/LO/: pp_glglbar_BMP1_LO.json  pp_glglbar_BMP2_LO.json  pp_glglbar_BMP3_LO.json  pp_sqLsqR+cc_BMP1_LO.json  pp_sqLsqR+cc_BMP2_LO.json  pp_sqLsqR+cc_BMP3_LO.json  pp_sqLsqR_BMP1_LO.json  pp_sqLsqR_BMP2_LO.json  pp_sqLsqR_BMP3_LO.json  pp_sqgl+cc_BMP3_LO.json  pp_sqsqdagger_BMP1_LO.json  pp_sqsqdagger_BMP2_LO.json  pp_sqsqdagger_BMP3_LO.json
test/ref_outputs/NLO/: pp_sqLsqR+cc_BMP1.json  pp_sqLsqR+cc_BMP2_DR.json  pp_sqLsqR+cc_BMP3_DR.json  pp_sqLsqR_BMP1.json  pp_sqLsqR_BMP2_DR.json  pp_sqLsqR_BMP3_DR.json  pp_sqsqdagger_BMP1.json  pp_sqsqdagger_BMP2_DR.json  pp_sqsqdagger_BMP3_DR.json  pp_suLsuLdagger_BMP1.json  pp_suLsuLdagger_BMP2_DR.json  pp_suLsuLdagger_BMP3_DR.json  pp_suLsuLdagger_BMP4.json  pp_suLsuLdagger_BMP5_DR.json  pp_suLsuR_BMP1-scale_variation.json  pp_suLsuR_BMP1.json  pp_suLsuR_BMP2_DR.json  pp_suLsuR_BMP3_DR.json
test/ref_outputs/madgraph/pp_sqlsqr/: pp_sqlsqr_BMP1  pp_sqlsqr_BMP2_DR  pp_sqlsqr_BMP3_DR
test/ref_outputs/madgraph/pp_sqlsqr+cc/: pp_sqlsqr+cc_BMP1  pp_sqlsqr+cc_BMP2_DR  pp_sqlsqr+cc_BMP3_DR
test/ref_outputs/madgraph/pp_sqsqc/: pp_sqsqc_BMP1.out
test/ref_outputs/madgraph/pp_sulsulc/: BMP1.out  BMP3.out  BMP4.out  BMP5.out
test/ref_outputs/madgraph/pp_sulsur/: pp_suLsuR_BMP1-scale_variation  pp_suLsuR_BMP1.out  pp_suLsuR_BMP2_DR.out  pp_suLsuR_BMP3_DR.out
tests/: CMakeLists.txt  example_test.cpp
(+313 files in other folders)
